static/css/stylesheet.css
:root {
    --red: #e06c75;
    --green: #98c379;
    --yellow: #e5c07b;
    --blue: #61afef;
    --magenta: #c678dd;
    --cyan: #56b6c2;
    --foreground: #dcdfe4;
    --background: #282c34;
    --background-code: #191E26
}

.accent-red {
    color: var(--red);
}

.accent-green {
    color: var(--green);
}

.accent-yellow {
    color: var(--yellow);
}

.accent-blue {
    color: var(--blue);
}

.accent-magenta {
    color: var(--magenta);
}

.accent-cyan {
    color: var(--cyan);
}

@font-face {
    font-family: 'Source Code Pro';
    src: url('/fonts/SourceCodePro-Regular.woff2');
    font-stretch: normal;
    font-style: normal;
    font-weight: 400;
}

@font-face {
    font-family: 'Source Code Pro';
    src: url('/fonts/SourceCodePro-Italic.woff2');
    font-stretch: normal;
    font-style: italic;
    font-weight: 400;
}

@font-face {
    font-family: 'Source Code Pro';
    src: url('/fonts/SourceCodePro-Bold.woff2');
    font-stretch: normal;
    font-style: normal;
    font-weight: 700;
}

@font-face {
    font-family: 'Source Code Pro';
    src: url('/fonts/SourceCodePro-BoldItalic.woff2');
    font-stretch: normal;
    font-style: italic;
    font-weight: 700;
}

html, body {
    background-color: var(--background);
    color: var(--foreground);
    margin: 0px;
    height: 100%;
}

header, main, footer {
    max-width: 80ch;
    width: 80%;
}

header {
    display: flex;
    flex-flow: row wrap;
    align-items: center;
    justify-content: space-between;
    margin-top: 30px;
    margin-bottom: 30px;
}

@media only screen and (max-width: 750px) {
    header {
        display: flex;
        flex-direction: column;
        gap: 15px;
    }
}

@media only screen and (max-width: 460px) {
    header {
        display: flex;
        flex-direction: column;
        gap: 15px;
    }

    .main-nav {
        flex-flow: row wrap;
        justify-content: center;
    }
}

main {
    flex-grow: 1;
}

footer {
    text-align: center;
    margin-top: 75px;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    color: var(--blue);
}

a {
    color: var(--cyan);
}

table {
    width: 100%;
    border-collapse: collapse;
}

th, td {
    border: 1px solid;
    padding: 5px;
}

p code {
    background-color: var(--background-code);
    padding: 0.2em 0.4em;
    border-radius: 6px;
}

.top-flex-div {
    font-family: 'Source Code Pro', mono;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    margin: 0px;
    height: 100%;
}

.main-nav, .icon-nav {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 1em;
}

.main-nav {
    flex-grow: 1;
    justify-content: flex-end;
}

.invisible-link {
    color: var(--foreground);
    text-decoration: none;
}

.summary-timestamp {
    margin-bottom: 0.2em;
}

.summary-link {
    margin-top: 0.2em;
    color: var(--green);
}

.not-found {
    font-size: 20px;
    text-align: center;
}

#main-title {
    color: var(--foreground);
    margin: 0px;
}

#four-o-four {
    font-size: 64px;
}

#icon-github {
    color: var(--foreground);
    width: 1.5em;
    height: 1.5em;
}

#icon-mastodon {
    color: var(--magenta);
    width: 1.5em;
    height: 1.5em;
}

#icon-rss {
    color: var(--yellow);
    width: 1.5em;
    height: 1.5em;
}

/* Chroma syntax highlighting */
/* Background */ .bg { color:#abb2bf;background-color:var(--background-code); }
/* PreWrapper */ .chroma { color:#abb2bf;background-color:var(--background-code);overflow-x:auto; scrollbar-color:var(--cyan) var(--background-code);padding: 1em; border-radius: 3px}
/* Other */ .chroma .x {  }
/* Error */ .chroma .err {  }
/* CodeLine */ .chroma .cl {  }
/* LineLink */ .chroma .lnlinks { outline:none;text-decoration:none;color:inherit }
/* LineTableTD */ .chroma .lntd { vertical-align:top;padding:0;margin:0;border:0; }
/* LineTable */ .chroma .lntable { border-spacing:0;padding:0;margin:0;border:0; }
/* LineHighlight */ .chroma .hl { background-color:#3d4148 }
/* LineNumbersTable */ .chroma .lnt { white-space:pre;-webkit-user-select:none;user-select:none;margin-right:0.4em;padding:0 0.4em 0 0.4em;color:#55595f }
/* LineNumbers */ .chroma .ln { white-space:pre;-webkit-user-select:none;user-select:none;margin-right:0.4em;padding:0 0.4em 0 0.4em;color:#55595f }
/* Line */ .chroma .line { -webkit-text-size-adjust:100% }
/* Keyword */ .chroma .k { color:#c678dd }
/* KeywordConstant */ .chroma .kc { color:#e5c07b }
/* KeywordDeclaration */ .chroma .kd { color:#c678dd }
/* KeywordNamespace */ .chroma .kn { color:#c678dd }
/* KeywordPseudo */ .chroma .kp { color:#c678dd }
/* KeywordReserved */ .chroma .kr { color:#c678dd }
/* KeywordType */ .chroma .kt { color:#e5c07b }
/* Name */ .chroma .n { color:#e06c75 }
/* NameAttribute */ .chroma .na { color:#e06c75 }
/* NameBuiltin */ .chroma .nb { color:#e5c07b }
/* NameBuiltinPseudo */ .chroma .bp { color:#e06c75 }
/* NameClass */ .chroma .nc { color:#e5c07b }
/* NameConstant */ .chroma .no { color:#e06c75 }
/* NameDecorator */ .chroma .nd { color:#61afef }
/* NameEntity */ .chroma .ni { color:#e06c75 }
/* NameException */ .chroma .ne { color:#e06c75 }
/* NameFunction */ .chroma .nf { color:#61afef;font-weight:bold }
/* NameFunctionMagic */ .chroma .fm { color:#56b6c2;font-weight:bold }
/* NameLabel */ .chroma .nl { color:#e06c75 }
/* NameNamespace */ .chroma .nn { color:#e06c75 }
/* NameOther */ .chroma .nx { color:#e06c75 }
/* NameProperty */ .chroma .py { color:#e06c75 }
/* NameTag */ .chroma .nt { color:#e06c75 }
/* NameVariable */ .chroma .nv { color:#e06c75 }
/* NameVariableClass */ .chroma .vc { color:#e06c75 }
/* NameVariableGlobal */ .chroma .vg { color:#e06c75 }
/* NameVariableInstance */ .chroma .vi { color:#e06c75 }
/* NameVariableMagic */ .chroma .vm { color:#e06c75 }
/* Literal */ .chroma .l {  }
/* LiteralDate */ .chroma .ld {  }
/* LiteralString */ .chroma .s { color:#98c379 }
/* LiteralStringAffix */ .chroma .sa { color:#98c379 }
/* LiteralStringBacktick */ .chroma .sb { color:#98c379 }
/* LiteralStringChar */ .chroma .sc { color:#98c379 }
/* LiteralStringDelimiter */ .chroma .dl { color:#98c379 }
/* LiteralStringDoc */ .chroma .sd { color:#98c379 }
/* LiteralStringDouble */ .chroma .s2 { color:#98c379 }
/* LiteralStringEscape */ .chroma .se { color:#98c379 }
/* LiteralStringHeredoc */ .chroma .sh { color:#98c379 }
/* LiteralStringInterpol */ .chroma .si { color:#98c379 }
/* LiteralStringOther */ .chroma .sx { color:#98c379 }
/* LiteralStringRegex */ .chroma .sr { color:#98c379 }
/* LiteralStringSingle */ .chroma .s1 { color:#98c379 }
/* LiteralStringSymbol */ .chroma .ss { color:#98c379 }
/* LiteralNumber */ .chroma .m { color:#d19a66 }
/* LiteralNumberBin */ .chroma .mb { color:#d19a66 }
/* LiteralNumberFloat */ .chroma .mf { color:#d19a66 }
/* LiteralNumberHex */ .chroma .mh { color:#d19a66 }
/* LiteralNumberInteger */ .chroma .mi { color:#d19a66 }
/* LiteralNumberIntegerLong */ .chroma .il { color:#d19a66 }
/* LiteralNumberOct */ .chroma .mo { color:#d19a66 }
/* Operator */ .chroma .o { color:#56b6c2 }
/* OperatorWord */ .chroma .ow { color:#56b6c2 }
/* Punctuation */ .chroma .p {  }
/* Comment */ .chroma .c { color:#7f848e }
/* CommentHashbang */ .chroma .ch { color:#7f848e }
/* CommentMultiline */ .chroma .cm { color:#7f848e }
/* CommentSingle */ .chroma .c1 { color:#7f848e }
/* CommentSpecial */ .chroma .cs { color:#7f848e }
/* CommentPreproc */ .chroma .cp { color:#7f848e }
/* CommentPreprocFile */ .chroma .cpf { color:#7f848e }
/* Generic */ .chroma .g {  }
/* GenericDeleted */ .chroma .gd { color:#e06c75 }
/* GenericEmph */ .chroma .ge {  }
/* GenericError */ .chroma .gr {  }
/* GenericHeading */ .chroma .gh {  }
/* GenericInserted */ .chroma .gi { color:#98c379;font-weight:bold }
/* GenericOutput */ .chroma .go {  }
/* GenericPrompt */ .chroma .gp {  }
/* GenericStrong */ .chroma .gs {  }
/* GenericSubheading */ .chroma .gu {  }
/* GenericTraceback */ .chroma .gt {  }
/* GenericUnderline */ .chroma .gl {  }
/* TextWhitespace */ .chroma .w {  }

